fixed width scalation on mobile devices (changed to vw instead of vh)

--- a/components/IntroScene/IntroScene.css
+++ b/components/IntroScene/IntroScene.css
@@ -1,5 +1,5 @@
 .IntroScene {
-  width: 200vh;
+  width: 100vw;
   height: 100vh;
 
   background: rgb(3, 0, 0);
